--- a/style.css
+++ b/style.css
@@ -352,19 +352,20 @@ i{
 
     #result {
         width: 100%;
-        height: 100;
+        height: auto;
         padding: 20px 10px;
     }
 
     #score {
-        font-size: 100px;
+        font-size: 50px;
     }
 
     #msg {
-        font-size: 90px;
+        font-size: 40px;
     }
 
 }
+
 
 
 
