--- a/style.css
+++ b/style.css
@@ -188,7 +188,8 @@ label, input{
    background-color: rgb(213, 234, 213);
    border-radius:20px;
    width:450px;
-   margin:auto;
+   margin-top:100px;
+   margin-left:500px;
    height:300px;
    padding-top:25px;
    text-align:center;
@@ -365,6 +366,7 @@ i{
     }
 
 }
+
 
 
 
