--- a/style.css
+++ b/style.css
@@ -358,7 +358,17 @@ i{
         padding: 20px 10px;
     }
 
+    #score {
+        font-size: 40px;
+    }
+
+    #msg {
+        font-size: 50px;
+    }
 }
+
+}
+
 
 
 
