--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ label, input{
    border-radius:20px;
    width:450px;
    margin-top:100px;
-   margin-left:500px;
+   margin:auto;
    height:300px;
    padding-top:25px;
    text-align:center;
@@ -368,24 +368,3 @@ i{
 }
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
