--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ i{
         padding: 10px;
     }
 
-    label{
+    label, b{
         font-size:10px;
     }
     
@@ -377,6 +377,7 @@ i{
 }
 
 }
+
 
 
 
