--- a/style.css
+++ b/style.css
@@ -330,8 +330,8 @@ i{
         padding: 10px;
     }
 
-    label, b{
-        font-size:10px;
+    label{
+        font-size:20px;
     }
     
     input {
@@ -372,6 +372,7 @@ i{
 }
 
 }
+
 
 
 
