--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ i{
         padding: 10px;
     }
 
-    label{
+    b{
         font-size:20px;
     }
     
@@ -372,6 +372,7 @@ i{
 }
 
 }
+
 
 
 
