--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
     color:green; 
     font-size: 30px; 
     font-weight:bold; 
-    float:left;
+    float:right;
 }
 
 #testbody{
@@ -311,7 +311,7 @@ i{
     color:green; 
     font-size: 10px; 
     font-weight:bold; 
-    float:left;
+    float:right;
 }
     #title {
         font-size: 30px;
@@ -372,6 +372,7 @@ i{
 }
 
 }
+
 
 
 
